# Flupke

./: README.md  __init__.py  install_dialog.py  launcher.py  main.py  pyproject.toml  test.py
src/: install_dialog.py
src/flauncher/: __init__.py  launcher.py  test.py
