[project]
name = "flauncher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Philippe Soubrier", email = "philippe.soubrier@ugent.be" }
]
requires-python = ">=3.13"
dependencies = [
    "flet[all]>=0.28.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
flauncher = "flauncher.launcher:run_launcher"
test = "flauncher.test:print_message"